# bankstatementparser-writer-xlsx

./: .codecov.yml  .gitignore  .pre-commit-config.yaml  .safety-policy.yml  ARCHITECTURE.md  CHANGELOG.md  CODE-OF-CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  MANIFEST.in  Makefile  README.md  RELEASING.md  ROADMAP.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  docs.yml  nightly.yml  pr.yml  release.yml  security.yml
bankstatementparser_writer_xlsx/: __init__.py  writer.py
docs/: Makefile  api.md  conf.py  index.md
examples/: 01_minimal_write.py  01_write_dataframe.py  02_write_transactions.py  02_write_with_summary.py  03_write_dicts.py  04_write_with_summary.py  05_custom_sheet_name.py  06_value_coercion_and_errors.py  README.md
scripts/: verify_versions.py
tests/: __init__.py  test_docs_accuracy.py  test_regression_docs.py  test_regression_examples.py  test_writer.py
