[tool.poetry]
name = "bankstatementparser-writer-xlsx"
version = "0.0.10"
description = "Excel (.xlsx) writer for bankstatementparser-parsed bank statements."
authors = ["Sebastien Rousseau <sebastian.rousseau@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/sebastienrousseau/bankstatementparser-writer-xlsx"
homepage = "https://bankstatementparser.com"
keywords = [
    "bank-statements",
    "bankstatementparser",
    "xlsx",
    "excel",
    "openpyxl",
    "accounting",
    "reconciliation",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Office/Business :: Financial :: Accounting",
]
packages = [
    { include = "bankstatementparser_writer_xlsx" },
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
bankstatementparser = ">=0.0.9"
openpyxl = ">=3.1,<4"
pandas = ">=2.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=9.0.3,<10.0.0"
pytest-cov = ">=6.0.0,<8.0.0"
black = "^26.3.1"
ruff = "^0.1.0"
mypy = "^1.11.0"
bandit = "^1.7.0"
interrogate = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ['py310']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = ["-ra", "--strict-markers", "--tb=short"]

[tool.coverage.run]
branch = true
source = ["bankstatementparser_writer_xlsx"]

[tool.coverage.report]
exclude_also = [
    "if __name__ == .__main__.:",
    "pragma: no cover",
    "@overload",
]
fail_under = 100
show_missing = true
skip_covered = false

[tool.interrogate]
fail-under = 100
ignore-init-method = true
ignore-semiprivate = false
ignore-private = false
ignore-magic = true
exclude = ["tests", "examples"]

[tool.ruff]
line-length = 79
target-version = "py310"
extend-exclude = ["*.md", "tmp_env", ".venv", ".eggs"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true
exclude = [
    "tmp_env/",
    ".venv/",
    ".eggs/",
]

[[tool.mypy.overrides]]
module = "bankstatementparser.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "openpyxl"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "openpyxl.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pandas.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
# The writer accepts heterogeneous record shapes (DataFrame, Transaction,
# dict) normalised through ``Any``-typed cells, so relax the two strict
# checks that signature would trip while keeping the rest of strict mode.
module = "bankstatementparser_writer_xlsx.*"
disallow_any_generics = false
warn_return_any = false

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_calls = false
warn_unused_ignores = false
disable_error_code = ["arg-type", "return-value", "attr-defined", "assignment"]
